ESHOP-9 optimized methods in KeycloakService